@@ -5843,9 +5843,9 @@ sub parseMsg {
 		my $pet = unpack("C*",substr($msg, 16,  1));
 		my $weapon = unpack("S1", substr($msg, 18, 2));
 		my $shield = unpack("S1", substr($msg, $switch eq "01D8" ? 20 : 22, 2));
-		my $lowhead = $headgears_lut[unpack("S1",substr($msg, $switch eq "01D8" ? 22 : 20,  2))];
-		my $tophead = $headgears_lut[unpack("S1",substr($msg, 24,  2))];
-		my $midhead = $headgears_lut[unpack("S1",substr($msg, 26,  2))];
+		my $lowhead = unpack("S1", substr($msg, $switch eq "01D8" ? 22 : 20,  2));
+		my $tophead = unpack("S1", substr($msg, 24, 2));
+		my $midhead = unpack("S1", substr($msg, 26, 2));
 		my $hair_color = unpack("S1", substr($msg, 28, 2));
 		my $head_dir = unpack("S", substr($msg, 32, 2)) % 8;
 		my $sex = unpack("C*",substr($msg, 45,  1));
@@ -5998,9 +5998,9 @@ sub parseMsg {
 		my $type = unpack("S*", substr($msg, 14,  2));
 		my $weapon = unpack("S1", substr($msg, 18, 2));
 		my $shield = unpack("S1", substr($msg, $switch eq "01D9" ? 20 : 22, 2));
-		my $lowhead = $headgears_lut[unpack("S1",substr($msg, $switch eq "01D9" ? 22 : 20,  2))];
-		my $tophead = $headgears_lut[unpack("S1",substr($msg, 24,  2))];
-		my $midhead = $headgears_lut[unpack("S1",substr($msg, 26,  2))];
+		my $lowhead = unpack("S1", substr($msg, $switch eq "01D9" ? 22 : 20,  2));
+		my $tophead = unpack("S1", substr($msg, 24,  2));
+		my $midhead = unpack("S1", substr($msg, 26,  2));
 		my $hair_color = unpack("S1", substr($msg, 28, 2));
 		my $sex = unpack("C*", substr($msg, 45,  1));
 		my %coords;
@@ -6056,10 +6056,10 @@ sub parseMsg {
 		my $pet = unpack("C*",substr($msg, 16,  1));
 		my $weapon = unpack("S1", substr($msg, 18, 2));
 		my $shield = unpack("S1", substr($msg, $switch eq "01DA" ? 20 : 26, 2));
-		my $lowhead = $headgears_lut[unpack("S1",substr($msg, $switch eq "01DA" ? 22 : 20,  2))];
-		my $tophead = $headgears_lut[unpack("S1",substr($msg, 28,  2))];
-		my $midhead = $headgears_lut[unpack("S1",substr($msg, 30,  2))];
-		my $hair_color = unpack("S1",substr($msg, 32,  2));
+		my $lowhead = unpack("S1", substr($msg, $switch eq "01DA" ? 22 : 20,  2));
+		my $tophead = unpack("S1", substr($msg, 28, 2));
+		my $midhead = unpack("S1", substr($msg, 30, 2));
+		my $hair_color = unpack("S1", substr($msg, 32, 2));
 		my $sex = unpack("C*",substr($msg, 49,  1));
 		my (%coordsFrom, %coordsTo);
 		makeCoords(\%coordsFrom, substr($msg, 50, 3));
